<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.brindersaini.brinderjitsingh_comp304lab2_ex1.CusineType">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/background5"
        android:orientation="vertical"
        android:paddingBottom="30dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/cusineTypeTxtView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/cuisine_type"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <RadioGroup
            android:id="@+id/rdoGroupCusine"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/rdoBtnAmerica"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/cusine_1"
                android:textColor="@android:color/background_light"
                android:textColorLink="@android:color/holo_red_dark"
                android:textSize="18sp"
                app:buttonTint="@android:color/holo_red_light" />

            <RadioButton
                android:id="@+id/rdoBtnIndian"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:singleLine="false"
                android:text="@string/cusine_2"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                app:buttonTint="@android:color/holo_red_light" />

            <RadioButton
                android:id="@+id/rdoBtnCanadian"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/cusine_6"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                app:buttonTint="@android:color/holo_red_light" />

            <RadioButton
                android:id="@+id/rdoBtnItalian"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/cusine_3"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                app:buttonTint="@android:color/holo_red_light" />

            <RadioButton
                android:id="@+id/rdoBtnChinese"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/cusine_4"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                app:buttonTint="@android:color/holo_red_light" />

            <RadioButton
                android:id="@+id/rdoBtnRussian"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="Russian"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                app:buttonTint="@android:color/holo_red_light" />

            <RadioButton
                android:id="@+id/rdoBtnOthers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/cusine_7"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                app:buttonTint="@android:color/holo_red_light" />

        </RadioGroup>

    </LinearLayout>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">

    </FrameLayout>

</android.support.constraint.ConstraintLayout>
